# rust-numpy

./: Cargo.toml  README.md
src/: lib.rs
tests/: test_rnumpy.py
